test/error/parser/enum-mixed-mode.dsk
enum Mixed
    Ok = 200
    Pending
    Error = 500
end
